<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navStorageList"
            android:icon="@drawable/ic_storages"
            android:title="@string/storage_list" />
        <item
            android:id="@+id/navSearch"
            android:icon="@drawable/ic_search_24dp"
            android:title="@string/title_search" />

        <item
            android:id="@+id/navAddStorage"
            android:icon="@drawable/ic_add_storage"
            android:title="@string/title_add_storage" />

        <item
            android:id="@+id/navSettings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/title_settings" />
    </group>
</menu>
