<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.detail.StorageDetailFragment"
        android:background="@android:color/white"
        >

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:clipToPadding="false"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >


                <androidx.cardview.widget.CardView
                    android:id="@+id/imageLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/default_item_spacing"
                    android:layout_marginBottom="@dimen/default_item_spacing"
                    app:cardCornerRadius="@dimen/default_item_radius"
                    app:cardUseCompatPadding="true">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <io.ymsoft.objectfinder.view_custom.SquareImageView
                            android:id="@+id/imgView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:foreground="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:transitionName="storage_image"
                            />

                        <ImageView
                            android:id="@+id/pointer"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_target"
                            android:visibility="invisible"
                            tools:visibility="visible"
                            />
                    </FrameLayout>

                </androidx.cardview.widget.CardView>



                <!--뷰 스타일 확인용 실제로는 안보인다-->
                <com.google.android.material.chip.Chip
                    style="@style/AppTheme.Chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="object1"
                    android:visibility="gone"
                    tools:visibility="visible"
                    />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:clipToPadding="false"
                    android:paddingHorizontal="@dimen/activity_horizontal_margin"
                    app:chipSpacingHorizontal="@dimen/default_item_spacing"
                    app:chipSpacingVertical="@dimen/default_item_spacing"
                    android:animateLayoutChanges="true"
                    >

                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/emptyMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:text="@string/empty_msg_storage"
                    android:textAppearance="@style/AppTheme.TextAppearance.Chip"
                    android:textColor="@android:color/darker_gray"
                    android:paddingHorizontal="4dp"
                    />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:elevation="10dp"
            >

            <View
                android:layout_width="match_parent"
                android:layout_height="0.2dp"
                android:background="#1A000000"
                />
            <LinearLayout
                android:id="@+id/addLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_item_spacing"
                android:focusable="true"
                android:focusableInTouchMode="true"
                >
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/inputObject"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_object_name"
                        android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/addBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="66dp"
                    android:minWidth="10dp"
                    app:icon="@drawable/ic_add_24dp"
                    app:iconSize="28dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="8dp"
                    android:layout_marginStart="@dimen/default_item_spacing"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/checkActionMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingVertical="@dimen/default_item_spacing"
                android:paddingHorizontal="@dimen/activity_horizontal_margin"
                android:animateLayoutChanges="true"
                >
                <LinearLayout
                    android:id="@+id/checkAllBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <CheckBox
                        android:id="@+id/checkAllCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="1dp"
                        android:minHeight="1dp"
                        android:layout_marginBottom="-4dp"
                        android:clickable="false"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/all"
                        android:textColor="@android:color/black"
                        />
                </LinearLayout>

                <TextView
                    android:id="@+id/checkedCounter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/default_item_spacing"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    tools:text="17"
                    />

                <TextView
                    android:id="@+id/moveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_item_spacing"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/move"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                    android:visibility="visible"
                    tools:visibility="visible"
                    />

                <TextView
                    android:id="@+id/deleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_item_spacing"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/remove"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                    />

                <TextView
                    android:id="@+id/cancelBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_item_spacing"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/cancel"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                    />




            </LinearLayout>
        </LinearLayout>




    </LinearLayout>
</layout>